force-app/src/objects/ffr__RelatedContentPaneComponent__c.object
<CustomObject>
    <description>Components are discrete pieces of functionality that may reside on a Related Content Pane.</description>
    <fields>
        <fullName>ffr__ApexClass__c</fullName>
        <description>Defines the behaviour of the component instance</description>
        <label>Apex Class</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__Config__c</fullName>
        <label>Config</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffr__Height__c</fullName>
        <label>Height</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__Tab__c</fullName>
        <label>Tab</label>
        <referenceTo>ffr__RelatedContentPaneTab__c</referenceTo>
        <relationshipName>RelatedContentPaneComponentInstances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffr__Width__c</fullName>
        <label>Width</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Related Content Pane Component</label>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Content Pane Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>